--- a/backend/package.json
+++ b/backend/package.json
@@ -15,6 +15,7 @@
         "vite": "^6.2.4"
     },
     "dependencies": {
+        "react-icons": "^5.5.0",
         "react-router-dom": "^7.6.2"
     }
 }
