--- a/frontend/package.json
+++ b/frontend/package.json
@@ -11,18 +11,15 @@
     "preview": "vite preview"
   },
   "dependencies": {
-    "@emoji-mart/data": "^1.2.1",
+
     "axios": "^1.10.0",
-    "emoji-mart": "^5.6.0",
-    "lucide-react": "^0.525.0",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
     "react-icons": "^5.5.0",
     "react-leaflet": "^5.0.0",
     "react-modal": "^3.16.3",
-    "react-router-dom": "^7.6.2",
-    "sweetalert2": "^11.22.2",
-    "sweetalert2-react-content": "^5.1.0"
+    "react-router-dom": "^7.6.2"
+
   },
   "devDependencies": {
     "@eslint/js": "^9.25.0",
