--- a/frontend/package.json
+++ b/frontend/package.json
@@ -11,15 +11,14 @@
     "preview": "vite preview"
   },
   "dependencies": {
-
     "axios": "^1.10.0",
+    "lucide-react": "^0.525.0",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
     "react-icons": "^5.5.0",
     "react-leaflet": "^5.0.0",
     "react-modal": "^3.16.3",
     "react-router-dom": "^7.6.2"
-
   },
   "devDependencies": {
     "@eslint/js": "^9.25.0",
