--- a/frontend/package.json
+++ b/frontend/package.json
@@ -13,6 +13,7 @@
   "dependencies": {
     "@emoji-mart/data": "^1.2.1",
     "axios": "^1.10.0",
+    "date-fns": "^4.1.0",
     "emoji-mart": "^5.6.0",
     "lucide-react": "^0.525.0",
     "react": "^19.1.0",
