--- a/backend/.env.example
+++ b/backend/.env.example
@@ -88,3 +88,9 @@ VITE_APP_NAME="${APP_NAME}"
 GOOGLE_CLIENT_ID=
 GOOGLE_CLIENT_SECRET=
 GOOGLE_REDIRECT_URI=http://localhost:8000/api/auth/google/callback
+
+
+# facebook
+FACEBOOK_CLIENT_ID=
+FACEBOOK_CLIENT_SECRET=
+FACEBOOK_REDIRECT_URI=http://localhost:8000/api/auth/facebook/callback
