--- a/frontend/package.json
+++ b/frontend/package.json
@@ -12,22 +12,25 @@
   },
   "dependencies": {
     "@emoji-mart/data": "^1.2.1",
-    "@react-google-maps/api": "^2.20.7",
-    "date-fns": "^4.1.0",
-    "emoji-mart": "^5.6.0",
     "@fullcalendar/core": "^6.1.18",
     "@fullcalendar/daygrid": "^6.1.18",
     "@fullcalendar/interaction": "^6.1.18",
     "@fullcalendar/react": "^6.1.18",
     "@fullcalendar/timegrid": "^6.1.18",
+    "@react-google-maps/api": "^2.20.7",
     "axios": "^1.10.0",
+    "date-fns": "^4.1.0",
+    "emoji-mart": "^5.6.0",
     "lucide-react": "^0.525.0",
     "react": "^19.1.0",
     "react-calendar": "^6.0.0",
     "react-datepicker": "^8.4.0",
     "react-dom": "^19.1.0",
+    "react-dropzone": "^14.3.8",
+    "react-hook-form": "^7.60.0",
     "react-icons": "^5.5.0",
     "react-leaflet": "^5.0.0",
+    "react-loading-skeleton": "^3.5.0",
     "react-modal": "^3.16.3",
     "react-router-dom": "^7.6.2",
     "sweetalert2": "^11.22.2",
