--- a/frontend/package.json
+++ b/frontend/package.json
@@ -11,16 +11,13 @@
     "preview": "vite preview"
   },
   "dependencies": {
-
     "@emoji-mart/data": "^1.2.1",
     "@fullcalendar/core": "^6.1.18",
     "@fullcalendar/daygrid": "^6.1.18",
     "@fullcalendar/interaction": "^6.1.18",
     "@fullcalendar/react": "^6.1.18",
     "@fullcalendar/timegrid": "^6.1.18",
-
     "@react-google-maps/api": "^2.20.7",
-
     "axios": "^1.10.0",
     "date-fns": "^4.1.0",
     "emoji-mart": "^5.6.0",
@@ -36,6 +33,7 @@
     "react-loading-skeleton": "^3.5.0",
     "react-modal": "^3.16.3",
     "react-router-dom": "^7.6.2",
+    "react-toastify": "^11.0.5",
     "sweetalert2": "^11.22.2",
     "sweetalert2-react-content": "^5.1.0"
   },
@@ -50,8 +48,6 @@
     "eslint-plugin-react-refresh": "^0.4.19",
     "globals": "^16.0.0",
     "postcss": "^8.5.6",
-    "tailwindcss": "^3.4.3",
-    "vite": "^6.3.5",
     "tailwindcss": "^3.4.3",
     "vite": "^6.3.5"
   }
