--- a/frontend/package.json
+++ b/frontend/package.json
@@ -12,15 +12,15 @@
   },
   "dependencies": {
     "@emoji-mart/data": "^1.2.1",
-    "@react-google-maps/api": "^2.20.7",
-    "date-fns": "^4.1.0",
-    "emoji-mart": "^5.6.0",
     "@fullcalendar/core": "^6.1.18",
     "@fullcalendar/daygrid": "^6.1.18",
     "@fullcalendar/interaction": "^6.1.18",
     "@fullcalendar/react": "^6.1.18",
     "@fullcalendar/timegrid": "^6.1.18",
+    "@react-google-maps/api": "^2.20.7",
     "axios": "^1.10.0",
+    "date-fns": "^4.1.0",
+    "emoji-mart": "^5.6.0",
     "lucide-react": "^0.525.0",
     "react": "^19.1.0",
     "react-calendar": "^6.0.0",
@@ -31,7 +31,8 @@
     "react-modal": "^3.16.3",
     "react-router-dom": "^7.6.2",
     "sweetalert2": "^11.22.2",
-    "sweetalert2-react-content": "^5.1.0"
+    "sweetalert2-react-content": "^5.1.0",
+    "use-places-autocomplete": "^4.0.1"
   },
   "devDependencies": {
     "@eslint/js": "^9.25.0",
