admin user đã xóa thành công , đã đăng nhâp phân quyên

--- a/backend/.env
+++ b/backend/.env
@@ -2,6 +2,7 @@ APP_NAME=Laravel
 APP_ENV=local
 APP_KEY=base64:MyxL1PF3UZ7MmSGPS2BO9fgzsl3IB2oOAx2StTgZO8A=
 APP_DEBUG=true
+APP_ENV=local
 APP_URL=http://localhost
 
 APP_LOCALE=en
