--- a/backend/.env
+++ b/backend/.env
@@ -3,7 +3,7 @@ APP_ENV=local
 APP_KEY=base64:MyxL1PF3UZ7MmSGPS2BO9fgzsl3IB2oOAx2StTgZO8A=
 APP_DEBUG=true
 APP_ENV=local
-APP_URL=http://localhost
+APP_URL=http://localhost:8000
 
 APP_LOCALE=en
 APP_FALLBACK_LOCALE=en
