--- a/frontend/package.json
+++ b/frontend/package.json
@@ -34,6 +34,7 @@
     "react-modal": "^3.16.3",
     "react-router-dom": "^7.6.2",
     "react-toastify": "^11.0.5",
+    "react-webcam": "^7.2.0",
     "sweetalert2": "^11.22.2",
     "sweetalert2-react-content": "^5.1.0"
   },
