--- a/backend/composer.json
+++ b/backend/composer.json
@@ -12,6 +12,7 @@
         "laravel/sanctum": "^4.1",
         "laravel/socialite": "^5.21",
         "laravel/tinker": "^2.10.1",
+        "maatwebsite/excel": "^3.1",
         "socialiteproviders/facebook": "^4.1"
     },
     "require-dev": {
