--- a/frontend/package.json
+++ b/frontend/package.json
@@ -42,7 +42,9 @@
     "react-modal": "^3.16.3",
     "react-router-dom": "^7.6.2",
     "react-scripts": "5.0.1",
+    "react-select": "^5.10.2",
     "react-toastify": "^11.0.5",
+    "react-window": "^1.8.11",
     "sweetalert2": "^11.22.2",
     "sweetalert2-react-content": "^5.1.0",
     "web-vitals": "^2.1.4"
