--- a/frontend/package.json
+++ b/frontend/package.json
@@ -45,6 +45,7 @@
     "react-toastify": "^11.0.5",
     "sweetalert2": "^11.22.2",
     "sweetalert2-react-content": "^5.1.0",
+    "use-places-autocomplete": "^4.0.1",
     "web-vitals": "^2.1.4"
   },
   "devDependencies": {
