--- a/backend/composer.json
+++ b/backend/composer.json
@@ -13,6 +13,7 @@
         "laravel/socialite": "^5.21",
         "laravel/tinker": "^2.10.1",
         "maatwebsite/excel": "^3.1",
+        "openspout/openspout": "*",
         "socialiteproviders/facebook": "^4.1"
     },
     "require-dev": {
