--- a/frontend/package.json
+++ b/frontend/package.json
@@ -44,10 +44,11 @@
     "react-scripts": "5.0.1",
     "react-select": "^5.10.2",
     "react-toastify": "^11.0.5",
-    "react-window": "^1.8.11",
     "react-webcam": "^7.2.0",
+    "react-window": "^1.8.11",
     "sweetalert2": "^11.22.2",
     "sweetalert2-react-content": "^5.1.0",
+    "use-places-autocomplete": "^4.0.1",
     "web-vitals": "^2.1.4"
   },
   "devDependencies": {
